# opengl-quickstart

./: CMakeLists.txt  README.md  main.cpp
lib/glew-2.1.0/include/GL/: glew.h
lib/imgui/: imgui_impl_opengl3.cpp  imgui_impl_opengl3.h
shader/: BaseFragmentShader.glsl  BaseShader.glsl  BaseVertexShader.glsl
src/opengl-renderer/: IndexBuffer.cpp  IndexBuffer.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.cpp  VertexBufferLayout.h
src/ui/: UI.cpp  UI.h  Widget.h
src/ui/widgets/: Info.cpp  Info.h
